--- a/assets/css/scss/parts/_homepage.scss
+++ b/assets/css/scss/parts/_homepage.scss
@@ -200,7 +200,7 @@
 			text-align: center;
 		}
 	}
-
+	margin-bottom: 10px;
 	.dfp-mobile-leaderboard {
 		@media (max-width: 568px) {
 			padding-left: 0;
@@ -254,6 +254,19 @@
 			}
 			.cst-row {
 				margin: 0 auto;
+			}
+		}
+		.top-bar-section {
+			.has-dropdown {
+				> a::after {
+					top: 14.5px;
+					margin-top:0;
+				}
+			}
+			.dropdown {
+				li {
+					line-height: 45px;
+				}
 			}
 		}
 	}
@@ -1062,7 +1075,8 @@
 
 .widget_cst_featured_content_widget, .widget_cst_columnists_content_widget {
 	list-style-type: none;
-
+	margin-bottom: 10px;
+	float:left;
 /*	@media (min-width: 1025px) {
 		margin: 20px 0 20px 0;
 		padding: 10px 0 10px 0;
